# AdTracking_Fraud_Detection

./: .gitignore  Makefile  columns_description.json  pyproject.toml
experiments/: 03_base_experiments.csv  03_base_experiments_no_dupes.csv  05_extended_columns.csv  06_hyperparameters_tuning.csv
notebooks/: 01_overview.ipynb  02_base_eda.ipynb  03_base_experiments.ipynb  03_base_experiments_no_date_split.ipynb  03_base_experiments_no_dupes.ipynb  04_feature_engineering.ipynb  05_extended_columns_experiments.ipynb  06_hyperparameters_tuning.ipynb
src/: constants.py  datatypes.py  feature_engineering.py  utils.py
