[project]
name = "adtracking-fraud-detection"
version = "0.1.0"
description = "TalkingData AdTracking Fraud Detection Challenge"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "altair",
    "ipykernel",
    "pandera[polars]",
    "polars",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 120