[project]
name = "adtracking-fraud-detection"
version = "0.1.0"
description = "TalkingData AdTracking Fraud Detection Challenge"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "altair",
    "ipykernel",
    "pandas>=2.3.1", # for xgboost
    "pandera[polars]",
    "polars",
    "pyarrow>=21.0.0", # for xgboost
    "scikit-learn",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 120
